# GPT-Automator

./: .gitignore  README.md  agent.py  command.py  commands.py  gui.py  main.py  prompt_examples_not_working.txt  prompt_examples_working.txt  pyproject.toml  requirements.txt  scratch_apple_script.scpt  tools.py  transcriber.py  whisper_cpp.py
Fizz/: ContentView.swift  FizzApp.swift
Fizz.xcodeproj/: project.pbxproj
Fizz.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Fizz.xcodeproj/project.xcworkspace/xcuserdata/luke.xcuserdatad/: UserInterfaceState.xcuserstate
Fizz.xcodeproj/xcuserdata/chidiwilliams.xcuserdatad/xcschemes/: xcschememanagement.plist
FizzTests/: FizzTests.swift
FizzUITests/: FizzUITests.swift  FizzUITestsLaunchTests.swift
